@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-29T08:30:47Z",
-  "count" : 35,
-  "count_minmax" : [ 27, 41 ],
+  "timestamp" : "2022-04-29T16:34:32Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 41 ],
   "count_prev_day_inc" : 37,
   "count_prev_day_dec" : 0,
-  "uniques" : 12,
-  "uniques_minmax" : [ 12, 14 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 14 ],
   "uniques_prev_day_inc" : 14,
   "uniques_prev_day_dec" : 0
 }
