@@ -1,11 +1,11 @@
 {
-  "count": 113,
-  "uniques": 18,
+  "count": 82,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-04-15T00:00:00Z",
-      "count": 35,
-      "uniques": 12
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
